<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/AddSubjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="67dp"
        android:text="@string/AddSubjects" />

    <Button
        android:id="@+id/MarkAttend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/AddSubjects"
        android:layout_marginTop="48dp"
        android:text="@string/Mark" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/Attendance"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/ViewAttendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/MarkAttend"
        android:layout_marginTop="40dp"
        android:text="@string/ViewA" />

    <Button
        android:id="@+id/BA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ViewAttendance"
        android:layout_marginTop="39dp"
        android:text="@string/BA" />

</RelativeLayout>