<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText1"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="14dp"
            android:text="@string/Withdraw"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/withdrawText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:hint="@string/Write"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/withdrawText"
            android:layout_marginTop="24dp"
            android:text="@string/AddNotes"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="17dp"
            android:hint="@string/notes"
            android:singleLine="true" />

        <Button
            android:id="@+id/withdraw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/notes"
            android:layout_marginTop="41dp"
            android:text="@string/Subtract" />

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/withdraw"
            android:layout_marginTop="46dp"
            android:text="@string/Back" />

    </RelativeLayout>

</LinearLayout>