<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Notice"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/addnotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddNotice1" />

    <Button
        android:id="@+id/BackNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Back" />

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >

    <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="fill_parent">
        
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </TableLayout>
</HorizontalScrollView>
    </ScrollView>
</LinearLayout>